clean up and first attempt to moving panels

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "DesktopGoodness",
   "version": "0.0.0",
-  "main": "src/client/bootstrap.js",
+  "main": "src/client/boot.js",
   "description": "DesktopGoodness\r ===============",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "coffee-script": "~1.7.1",
+    "debug": "^1.0.4",
     "envify": "^1.2.1",
     "fs-plus": "~2.2.4",
+    "jquery": "^2.1.1",
+    "jquery-ui": "^1.10.5",
     "react-atom-fork": "^0.10.0",
     "rimraf": "~2.2.8",
     "season": "~2.0.0"
